# codecrafters-shell-rust

./: Cargo.toml  README.md
.trunk/: trunk.yaml
src/: main.rs
