cargo-features = ["edition2024"]

[package]
name = "shell-starter-rust"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
strip = true
panic = "abort"

[dependencies]
rustyline = "14.0.0"
shell-words = "1.1.0"
strum = { version = "0.26.2", features = ["std", "derive", "strum_macros"] }
thiserror = "1.0.38"
